# jest-large

./: .gitignore  LICENSE  MODULE.bazel  README.md  pnpm-lock.yaml
pkg/: BUILD.bazel  gen.py
pkg/a/: BUILD.bazel  gen.py  index.test.js  package.json
